# themis-legal

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  validate_retrieval.py
backend/app/: auth.py  auth_service.py  config.py  database.py  errors.py  main.py  scheduler.py
backend/prompts/: LA-CONF-confidence.txt  LA-CONFLICT-conflict-resolver.txt  LA-S1-issue-classifier.txt  LA-S2-date-extractor.txt  LA-S2.5-clarification.txt  LA-S3-law-identifier.txt  LA-S5-import-request.txt  LA-S6-article-selector.txt  LA-S6.5-relevance-check.txt  LA-S6.8-legal-reasoning.txt  LA-S7-M2-answer-memo.txt  LA-S7-M3-answer-comparison.txt  LA-S7-M4-answer-compliance.txt  LA-S7-M5-answer-checklist.txt  LA-S7-answer-qa.txt  LA-S7-answer-template.txt  LA-S7-mode-checklist.txt  LA-S7-mode-comparison.txt  LA-S7-mode-compliance.txt  LA-S7-mode-memo.txt  LA-S7-mode-qa.txt  LA-S7-mode-simple.txt  LA-S7-simple.txt  LA-V2-S1-classifier.txt  LA-V2-S4-reasoning.txt  LA-V2-S5-answer.txt
backend/scripts/: backfill_abrogated.py  backfill_eu_issuers.py  backfill_paragraph_notes.py  build_robor_seed.py  load_robor_seed.py  reindex_missing.py  reindex_with_aicc.py  reindex_with_aicc_bulk.py  seed_aicc_memberships.py
backend/tests/: conftest.py  test_aicc_auth_client.py  test_aicc_embedding.py  test_article_coverage.py  test_article_tokenizer.py  test_auth_dependency.py  test_candidate_lookup.py  test_candidate_protection.py  test_celex_parser.py  test_check_updates_endpoint.py  test_chroma_service_provider.py  test_chroma_validation.py  (+59 more)
(+326 files in other folders)
