[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.40.0",
    "apscheduler>=3.11.2",
    "cachetools>=5.5.0",
    "chromadb>=0.6.0",
    "fastapi>=0.135.1",
    "httpx>=0.27.0",
    "leropa",
    "mistralai>=2.1.3",
    "openai>=2.30.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=3.0",
    "sqlalchemy>=2.0.48",
    "sse-starlette>=2.0",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
leropa = { git = "https://github.com/pyl1b/legislatie-just-ro-parser.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
